log classpath entries that don't exist